[gd_scene load_steps=32 format=3 uid="uid://b1xcvdj4jtjgr"]

[ext_resource type="Script" path="res://Scenes/Player/3D/StandardCharacter3D.gd" id="1_bm0qe"]
[ext_resource type="PackedScene" uid="uid://bcqgherwefoyg" path="res://Assets/Grab The Item/Alien.glb" id="2_jifx2"]
[ext_resource type="Shader" uid="uid://7gcbwkd3kxd3" path="res://Assets/CelShader.tres" id="3_c2fyi"]
[ext_resource type="Texture2D" uid="uid://cu66nmwfkouqu" path="res://Assets/Grab The Item/Alien_AlienColBasic.png" id="3_d0k4c"]
[ext_resource type="PackedScene" uid="uid://cj28sqkx0c855" path="res://Assets/Particle FX/3DSmokeClouds.tscn" id="4_tl3p6"]
[ext_resource type="AudioStream" uid="uid://cq0i1ws17tktx" path="res://Assets/Sounds/SlimeGrunt.wav" id="5_lq4lc"]
[ext_resource type="AudioStream" uid="uid://c2tktsgfa5ku4" path="res://Assets/Sounds/03_Step_grass_03.wav" id="5_qwmjk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p8fvo"]
height = 3.216

[sub_resource type="Gradient" id="Gradient_tgy6u"]
colors = PackedColorArray(0.245979, 0.0937918, 0.255934, 1, 0.546307, 0.476643, 0.8573, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3ivd2"]
gradient = SubResource("Gradient_tgy6u")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c32rr"]
render_priority = 0
shader = ExtResource("3_c2fyi")
shader_parameter/scaling = Vector2(1, 1)
shader_parameter/Roughness_Strength = 1.0
shader_parameter/Shadow_Hardness_Min = 0.5
shader_parameter/Shadow_Hardness_Max = 1.0
shader_parameter/Color_Map = ExtResource("3_d0k4c")
shader_parameter/hue = SubResource("GradientTexture1D_3ivd2")

[sub_resource type="Gradient" id="Gradient_4jtxa"]
offsets = PackedFloat32Array(0, 0.975)
colors = PackedColorArray(0.103186, 0.0126273, 0.211878, 1, 0.305541, 0.104211, 0.570331, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1gruc"]
gradient = SubResource("Gradient_4jtxa")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_us4rx"]
render_priority = 0
shader = ExtResource("3_c2fyi")
shader_parameter/scaling = Vector2(1, 1)
shader_parameter/Roughness_Strength = 0.4
shader_parameter/Shadow_Hardness_Min = 0.5
shader_parameter/Shadow_Hardness_Max = 1.0
shader_parameter/Color_Map = ExtResource("3_d0k4c")
shader_parameter/hue = SubResource("GradientTexture1D_1gruc")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8cwe"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ij8x"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tl1oc"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cf2i6"]
animation = &"Landing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gnc2n"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_60fbt"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eu68u"]
advance_mode = 2
advance_condition = &"isJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p2aj0"]
advance_mode = 2
advance_condition = &"isMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rfvwx"]
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5f3l"]
advance_mode = 2
advance_condition = &"isFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mhh4n"]
switch_mode = 1
advance_mode = 2
advance_condition = &"landed"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v5wcj"]
xfade_time = 1.5
switch_mode = 1
advance_mode = 2
advance_condition = &"isMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tuotq"]
xfade_time = 1.5
switch_mode = 1
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_74lp0"]
switch_mode = 1
advance_mode = 2
advance_condition = &"isJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d3fcj"]
switch_mode = 1
advance_mode = 2
advance_condition = &"isMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hb76h"]
switch_mode = 1
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qte5v"]
states/End/position = Vector2(1161, 100.25)
states/Falling/node = SubResource("AnimationNodeAnimation_b8cwe")
states/Falling/position = Vector2(634.665, -40.2374)
states/Idle/node = SubResource("AnimationNodeAnimation_0ij8x")
states/Idle/position = Vector2(363.665, 114.2)
states/Jump/node = SubResource("AnimationNodeAnimation_tl1oc")
states/Jump/position = Vector2(414.665, -16.1749)
states/Landing/node = SubResource("AnimationNodeAnimation_cf2i6")
states/Landing/position = Vector2(1019.16, 6.7001)
states/Start/position = Vector2(176, 98.375)
states/Walk/node = SubResource("AnimationNodeAnimation_gnc2n")
states/Walk/position = Vector2(634.165, 146.2)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_60fbt"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_eu68u"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_p2aj0"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_rfvwx"), "Jump", "Falling", SubResource("AnimationNodeStateMachineTransition_u5f3l"), "Falling", "Landing", SubResource("AnimationNodeStateMachineTransition_mhh4n"), "Landing", "Walk", SubResource("AnimationNodeStateMachineTransition_v5wcj"), "Landing", "Idle", SubResource("AnimationNodeStateMachineTransition_tuotq"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_74lp0"), "Falling", "Walk", SubResource("AnimationNodeStateMachineTransition_d3fcj"), "Falling", "Idle", SubResource("AnimationNodeStateMachineTransition_hb76h")]
graph_offset = Vector2(-0.555103, -82.1275)

[node name="StandardCharacter3D" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_bm0qe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.635712, 0)
shape = SubResource("CapsuleShape3D_p8fvo")

[node name="Alien" parent="." instance=ExtResource("2_jifx2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="Skeleton3D" parent="Alien/Armature" index="0"]
bones/0/rotation = Quaternion(0.00459362, -0.00371435, 0.0267064, 0.999626)
bones/1/rotation = Quaternion(-0.00624343, -0.0037147, 0.116824, 0.993126)
bones/2/rotation = Quaternion(0.00142979, -0.00784413, -0.311141, 0.95033)
bones/3/rotation = Quaternion(-0.00482582, -0.00766501, 0.0380214, 0.999236)
bones/4/rotation = Quaternion(0.030445, 0.0305302, 0.0935966, 0.994676)
bones/5/rotation = Quaternion(-0.7922, 0.200776, 0.170751, 0.550411)
bones/6/rotation = Quaternion(-0.115102, 0.0265552, 0.0495063, 0.991764)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.0796968, 0.0128289, -0.104988, 0.991192)
bones/8/rotation = Quaternion(0.15071, 6.74783e-08, 0.310581, 0.938523)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.0333588, -3.15243e-08, -0.0687452, 0.997076)
bones/9/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.107258, 4.41955e-08, -0.221037, 0.96935)
bones/12/rotation = Quaternion(0.087506, -1.42592e-08, 0.180331, 0.979706)
bones/14/rotation = Quaternion(0.733305, -0.231477, 0.182918, 0.612555)
bones/15/rotation = Quaternion(0.16644, -0.0302236, -0.0223938, 0.985334)
bones/16/rotation = Quaternion(0.0487512, -0.00939677, -0.0459724, 0.997708)
bones/17/rotation = Quaternion(-0.153918, -1.23086e-07, 0.309865, 0.938239)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.0204663, 9.29542e-09, -0.0448299, 0.998785)
bones/20/rotation = Quaternion(0.105622, -4.83685e-09, -0.24896, 0.962737)
bones/21/rotation = Quaternion(-0.0850919, -7.60247e-09, 0.179776, 0.98002)
bones/23/rotation = Quaternion(0.0124373, 0.000810516, 0.179486, 0.983682)
bones/24/rotation = Quaternion(0.00881415, 0.00338759, 0.00807555, 0.999923)
bones/25/rotation = Quaternion(0.00455146, 0.00461768, 0.183209, 0.983053)
bones/26/rotation = Quaternion(0.0025278, 0.00379917, 0.390095, 0.920763)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.00220045, 0.00249591, 0.291115, 0.956682)
bones/28/rotation = Quaternion(0.00173415, 0.00120555, 0.325318, 0.945602)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.000889525, 0.000187962, 0.125728, 0.992064)
bones/30/rotation = Quaternion(-9.6385e-08, -5.10947e-08, -0.539378, 0.842064)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(1.77617e-08, -5.19654e-08, -0.57525, 0.817978)
bones/33/rotation = Quaternion(-9.76843e-08, -5.73791e-08, -0.555733, 0.831361)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(0.892678, 0.172097, -0.0768752, -0.409389)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(-0.227509, -0.0740884, 0.37721, 0.894686)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(-0.105154, -0.00355616, -0.0227768, 0.994189)
bones/37/rotation = Quaternion(-0.322117, -1.16965e-07, -0.558522, 0.764392)
bones/38/rotation = Quaternion(-1.58569e-09, 4.87489e-09, -4.12439e-09, 1)
bones/39/rotation = Quaternion(0.442778, 1.26104e-07, 0.791671, -0.420957)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.0888573, 3.36606e-08, -0.165406, 0.982215)
bones/41/rotation = Quaternion(0.349318, 0.0574939, 0.48169, 0.801652)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.11303, 0.0352504, 0.332033, 0.935808)
bones/43/rotation = Quaternion(0.871166, 0.18094, 0.0625243, 0.45213)
bones/43/scale = Vector3(1, 1, 1)
bones/44/rotation = Quaternion(0.322984, 0.0835677, 0.3817, 0.861976)
bones/45/rotation = Quaternion(0.0700217, -0.00249291, 0.0067593, 0.99752)
bones/46/rotation = Quaternion(0.305524, -1.94851e-08, -0.567288, 0.764748)
bones/46/scale = Vector3(1, 1, 1)
bones/47/rotation = Quaternion(0.00530512, 2.74336e-08, -0.0106221, 0.99993)
bones/48/rotation = Quaternion(-0.407891, -3.14577e-08, 0.823467, -0.394369)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(0.0663585, -3.72889e-08, -0.149399, 0.986548)
bones/50/rotation = Quaternion(-0.232871, -4.66097e-08, 0.524285, 0.819083)
bones/50/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(-0.216682, -0.0202584, 0.225257, 0.949683)
bones/52/rotation = Quaternion(4.72513e-08, -1.87133e-08, -0.78994, 0.613184)
bones/52/scale = Vector3(1, 1, 1)
bones/53/position = Vector3(-1.37248, 3.00302, -2.07759)
bones/54/position = Vector3(-1.3862, 3.02361, 2.27786)
bones/55/position = Vector3(-2.88024, 3.69006, 0.153195)
bones/55/rotation = Quaternion(-7.95848e-08, 8.23389e-09, 0.999999, 0.00158906)
bones/56/position = Vector3(0.105328, -0.389282, 0.709717)
bones/56/rotation = Quaternion(-0.667891, 0.0268975, 0.742162, 0.048929)
bones/56/scale = Vector3(1, 1, 1)
bones/57/position = Vector3(0.0539457, -0.440665, -0.744386)
bones/57/rotation = Quaternion(-0.667891, 0.0268975, 0.742162, 0.048929)
bones/57/scale = Vector3(1, 1, 1)

[node name="Body" parent="Alien/Armature/Skeleton3D" index="0"]
lod_bias = 0.2
surface_material_override/0 = SubResource("ShaderMaterial_c32rr")

[node name="Eyes_003" parent="Alien/Armature/Skeleton3D" index="1"]
lod_bias = 0.5
surface_material_override/0 = SubResource("ShaderMaterial_us4rx")

[node name="AnimationTree" type="AnimationTree" parent="Alien"]
tree_root = SubResource("AnimationNodeStateMachine_qte5v")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/isFalling = false
parameters/conditions/isIdle = false
parameters/conditions/isJumping = false
parameters/conditions/isMoving = false
parameters/conditions/landed = false

[node name="3dSmokeClouds" parent="." instance=ExtResource("4_tl3p6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.878416, 2.08165e-12)
emitting = false
one_shot = true

[node name="WalkSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_qwmjk")

[node name="JumpSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_lq4lc")

[editable path="Alien"]
